--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\obs-studio\libops-sharp\libobs-sharp\libobs-sharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Objects\" />
+  </ItemGroup>
+
 </Project>
