set monitor settings

--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -23,4 +23,8 @@
     <Folder Include="Objects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms" />
+  </ItemGroup>
+
 </Project>
