pass a bunch of parameters to accurately get screen info

--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -24,6 +24,7 @@
       <HintPath>..\..\Windows Screen Recorder 2\obs-studio\build64\rundir\Debug\bin\64bit\NReco.VideoConverter.LT.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
 
 </Project>
