--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -23,6 +23,7 @@
     <Reference Include="NReco.VideoConverter.LT">
       <HintPath>..\..\Windows Screen Recorder 2\obs-studio\build64\rundir\Debug\bin\64bit\NReco.VideoConverter.LT.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
