--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net35</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RootNamespace>obs_cli</RootNamespace>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,6 +17,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Windows\WebcamWindow.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="Windows\WebcamWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\obs-studio\libops-sharp\libobs-sharp\libobs-sharp.csproj" />
   </ItemGroup>
 
@@ -23,9 +34,12 @@
     <Reference Include="NReco.VideoConverter.LT">
       <HintPath>..\..\Windows Screen Recorder 2\obs-studio\build64\rundir\Debug\bin\64bit\NReco.VideoConverter.LT.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
 
 </Project>
