--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\obs-studio\libops-sharp\libobs-sharp\libobs-sharp.csproj" />
+    <ProjectReference Include="..\WpfMonitorAware\MonitorAware\MonitorAware.csproj" />
   </ItemGroup>
 
   <ItemGroup>
