--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net35</TargetFramework>
+    <TargetFramework>net40</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RootNamespace>obs_cli</RootNamespace>
     <UseWPF>true</UseWPF>
@@ -17,10 +17,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controls\WindowsFormsHostOverlay.xaml" />
     <None Remove="Windows\WebcamWindow.xaml" />
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="Controls\WindowsFormsHostOverlay.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\WebcamWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -32,6 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="DirectShowLib-2005">
+      <HintPath>..\obs-studio\build64\rundir\Debug\bin\64bit\DirectShowLib-2005.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Windows.Shell">
+      <HintPath>..\obs-studio\build64\rundir\Debug\bin\64bit\Microsoft.Windows.Shell.dll</HintPath>
+    </Reference>
     <Reference Include="NReco.VideoConverter.LT">
       <HintPath>..\..\Windows Screen Recorder 2\obs-studio\build64\rundir\Debug\bin\64bit\NReco.VideoConverter.LT.dll</HintPath>
     </Reference>
@@ -39,6 +49,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
