--- a/obs-cli.csproj
+++ b/obs-cli.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\obs-studio\libops-sharp\libobs-sharp\libobs-sharp.csproj" />
-    <ProjectReference Include="..\WpfMonitorAware\MonitorAware\MonitorAware.csproj" />
+    <ProjectReference Include="..\ilos_recorder\WpfMonitorAware\MonitorAware\MonitorAware.csproj" />
   </ItemGroup>
 
   <ItemGroup>
