--- a/vidgrid-recorder-cli.csproj
+++ b/vidgrid-recorder-cli.csproj
@@ -18,6 +18,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\obs-studio\build64\rundir\Release\bin\64bit\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
