--- a/vidgrid-recorder-cli.csproj
+++ b/vidgrid-recorder-cli.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NamedPipeWrapper" Version="1.5.0" />
     <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="WPF.Shell.Integration.Library" Version="2.0.0" />
   </ItemGroup>
